RESOLVED FIXED227482
ASSERT in webgl/1.0.x/conformance/glsl/misc/uninitialized-local-global-variables.html IdGen ASSERT(*base != '_');
https://bugs.webkit.org/show_bug.cgi?id=227482
Summary ASSERT in webgl/1.0.x/conformance/glsl/misc/uninitialized-local-global-varia...
Kimmo Kinnunen
Reported 2021-06-29 03:40:46 PDT
ASSERT in webgl/1.0.x/conformance/glsl/misc/uninitialized-local-global-variables.html IdGen ASSERT(*base != '_');
Attachments
Patch (6.70 KB, patch)
2021-06-29 04:16 PDT, Kimmo Kinnunen
no flags
Patch (6.67 KB, patch)
2021-06-29 04:21 PDT, Kimmo Kinnunen
no flags
Patch (6.67 KB, patch)
2021-06-29 05:01 PDT, Kimmo Kinnunen
no flags
Kimmo Kinnunen
Comment 1 2021-06-29 04:16:20 PDT
EWS Watchlist
Comment 2 2021-06-29 04:17:16 PDT
Note that there are important steps to take when updating ANGLE. See https://trac.webkit.org/wiki/UpdatingANGLE
Kimmo Kinnunen
Comment 3 2021-06-29 04:21:02 PDT
Kimmo Kinnunen
Comment 4 2021-06-29 05:01:05 PDT
Kenneth Russell
Comment 5 2021-06-29 15:46:35 PDT
Comment on attachment 432471 [details] Patch OK since this is tested, but: please keep in mind that in the WebGL shading language spec certain prefixes are reserved. See https://www.khronos.org/registry/webgl/specs/latest/1.0/#4.3 . Plausibly, if the shader compiler was instantiated for a WebGL context, it should be using "_webgl" as the prefix for all of these internally-generated names. r+
EWS
Comment 6 2021-06-30 11:33:45 PDT
Committed r279426 (239287@main): <https://commits.webkit.org/239287@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 432471 [details].
Radar WebKit Bug Importer
Comment 7 2021-06-30 11:34:42 PDT
Note You need to log in before you can comment on or make changes to this bug.