Source/ThirdParty/ANGLE/src/compiler/translator/TranslatorMetalDirect/IdGen.cpp
@@ -95,3 +95,9 @@ Name IdGen::createNewName(std::initializer_list<const char *> baseNames)
     return createNewName(baseNames.size(), baseNames.begin(),
                          [](const char *s) { return ImmutableString(s); });
 }
+
+Name IdGen::createNewName()
+{
+    // FIXME: This will be refactored later.
+    return createNewName<int>(0, nullptr, [](int) { return kEmptyImmutableString; });
+}
